--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: auto;
+  background-size: cover;
 }
 
 div {
