--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .trout {
-  width: 75%;
+  width: 50%;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 30px;
@@ -69,7 +69,7 @@ h3 {
   font-family: "roboto condensed";
   font-size: 22px;
   color: white;
-  text-align: left;
+  text-align: center;
   text-transform: uppercase;
   padding-left: 5%;
 }
