--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   border: 4px solid white;
   border-radius: 23px;
   margin: 30px;
+  text-align: center;
 }
 
 .hmm {
@@ -71,13 +72,13 @@ h3 {
   color: white;
   text-align: center;
   text-transform: uppercase;
-  padding-left: 5%;
 }
 
 h2 {
   font-family: "roboto condensed";
   font-size: 26px;
   color: #b98c75;
+  text-align: center;
   text-transform: uppercase;
 }
 
