--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
+  font-family: "roboto", sans-serif;
 }
 
 .trout {
@@ -67,7 +68,7 @@ div#wrapperHeader div#header img {
 }
 
 h3 {
-  font-family: "roboto condensed";
+  font-family: "roboto", sans-serif;
   font-size: 22px;
   color: white;
   text-align: center;
@@ -75,7 +76,7 @@ h3 {
 }
 
 h2 {
-  font-family: "roboto condensed";
+  font-family: "roboto", sans-serif;
   font-size: 26px;
   color: #b98c75;
   text-align: center;
@@ -83,7 +84,7 @@ h2 {
 }
 
 h1 {
-  font-family: "roboto condensed";
+  font-family: "roboto", sans-serif;
   font-size: 24px;
   color: #E1AB87;
   padding: 0px;
@@ -101,6 +102,6 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-family: roboto;
+  font-family: "roboto", sans-serif;
   font-size: 18px;
 }
