--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 body {
   background-image: url("https://i.imgur.com/N1rdKHo.png");
@@ -6,7 +6,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-  font-family: "roboto", sans-serif;
+  font-family: "roboto condensed", "open sans", sans-serif;
 }
 
 .trout {
@@ -68,7 +68,7 @@ div#wrapperHeader div#header img {
 }
 
 h3 {
-  font-family: "roboto", sans-serif;
+  font-family: "roboto condensed", "open sans", sans-serif;
   font-size: 22px;
   color: white;
   text-align: center;
@@ -76,15 +76,15 @@ h3 {
 }
 
 h2 {
-  font-family: "roboto", sans-serif;
-  font-size: 26px;
+  font-family: "roboto condensed", "open sans", sans-serif;
+  font-size: 28px;
   color: #b98c75;
   text-align: center;
   text-transform: uppercase;
 }
 
 h1 {
-  font-family: "roboto", sans-serif;
+  font-family: "roboto condensed", "open sans", sans-serif;
   font-size: 24px;
   color: #E1AB87;
   padding: 0px;
@@ -102,6 +102,6 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-family: "roboto", sans-serif;
+  font-family: "roboto condensed", "open sans", sans-serif;
   font-size: 18px;
 }
