--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@ body {
 .container {
   padding: 0% 5% 0%;
   width: auto;
+  margin: 0 0 0;
 }
 
 .trout {
   position: relative;
   z-index: 1;
   width: auto;
-  min-width: 30%;
+  min-width: 35%;
   max-width: 425px;
   /**
 yes i already tried 420 and it's too small so dont even try it!!
@@ -25,7 +26,7 @@ yes i already tried 420 and it's too small so dont even try it!!
   background-color: rgba(248, 208, 161, 1);
   border: 4px solid white;
   border-radius: 23px;
-  margin: 3% 25% 3%;
+  margin: 3% 5% 3%;
   padding: 0 3% 2%;
 }
 
