--- a/style.css
+++ b/style.css
@@ -1,28 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 body {
-  background-image: url("https://i.imgur.com/N1rdKHo.png");
+  background: url("https://i.imgur.com/N1rdKHo.png") no-repeat fixed;
   background-color: #cccccc;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: 100% 100%;
   font-family: "roboto condensed", "open sans", sans-serif;
 }
 
 .container {
-  padding: 0% 5% 0%;
-  width: auto;
-  margin: 0 0 0;
+  padding: 0;
+  width: 100%;
+  margin: 0 auto;
+  justify:center;
+  align:center;
 }
 
 .trout {
+  justify:center;
   position: relative;
-  z-index: 1;
-  width: auto;
+  width: 100%;
   min-width: 35%;
   max-width: 425px;
-  /**
-yes i already tried 420 and it's too small so dont even try it!!
-**/
   background-color: rgba(248, 208, 161, 1);
   border: 4px solid white;
   border-radius: 23px;
@@ -30,27 +27,8 @@ yes i already tried 420 and it's too small so dont even try it!!
   padding: 0 3% 2%;
 }
 
-/**
-
-.hmm {
-  background-color: white;
-  border: 4px solid white;
-  border-radius: 23px;
-  display: inline-block;
-  height: 50px;
-  margin: 20px;
-  padding-top: -50px;
-  padding-bottom: 10px;
-}
-
-who is she? whomst??
-why she here?
-
-**/
-
 .npc {
   position: relative;
-  z-index: 2;
   width: 100%;
   text-align: center;
 }
@@ -58,9 +36,7 @@ why she here?
 div#wrapperHeader {
   width: 100%;
   height: 200px;
-  background: url("https://i.imgur.com/tWerAps.png");
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url("https://i.imgur.com/tWerAps.png") no-repeat center;
   text-align: center;
 }
 
@@ -77,7 +53,7 @@ div#wrapperHeader div#header img {
 }
 
 .banner {
-  background-image: url("https://i.imgur.com/8qyJzyE.png");
+  background: url("https://i.imgur.com/8qyJzyE.png");
   margin: 0;
   position: absolute;
   top: 50%;
