--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 .trout {
   justify:center;
   position: relative;
-  width: 100%;
-  min-width: 35%;
+  width: 40%
+  min-width: 20%;
   max-width: 425px;
   background-color: rgba(248, 208, 161, 1);
   border: 4px solid white;
@@ -26,6 +26,7 @@ body {
   margin: 3% 5% 3%;
   padding: 0 3% 2%;
 }
+
 
 .npc {
   position: relative;
