--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   max-width: 425px;
   background-color: rgba(248, 208, 161, 1);
   border: 4px solid white;
-  border-radius: 25px;
+  border-radius: 25%;
   margin: 3% 5% 3%;
   padding: 0 3% 2%;
 }
