--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 html {
     overflow: scroll;
     overflow-x: hidden;
+     -webkit-box-sizing: border-box;
+    /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;
+    /* Firefox, other Gecko */
+    box-sizing: border-box;
+    /* Opera/IE 8+ */
 }
+
 ::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
+    width: 0px;
+    /* remove scrollbar space */
+    background: transparent;
+    /* optional: just make scrollbar invisible */
 }
 
 body {
@@ -13,38 +22,34 @@ body {
     background-size: 100% 100%;
     font-family: "roboto condensed", "open sans", sans-serif;
     font-weight: bold;
+    font-size: 18px;
     -webkit-user-select: none;
     /* Chrome all / Safari all */
     -moz-user-select: none;
     /* Firefox all */
     -ms-user-select: none;
     /* IE 10+ */
-    user-select: none;
-    /* Likely future */
+
 }
 
-.container {
-    padding: 0;
+/* .container {
+    padding: 0 auto;
     width: 100%;
     margin: 0 auto;
 }
+*/
 
 .trout {
     position: relative;
-    width: 40%;
-    min-width: 20%;
-    max-width: 425px;
-    background-color: rgba(248, 208, 161, 1);
+    width: inherit;
+    min-width: 35%;
+    max-width: 520px;
+    background-color: rgb(248, 208, 161);
     border: 4px solid white;
     border-radius: 23px;
     margin: 3% 5% 3%;
-    padding: 2 3% 22%;
-}
-
-.npc {
-    position: relative;
-    width: 100%;
-    text-align: center;
+    padding: 1% 0px 1%;
+    box-sizing: border-box;
 }
 
 #wrapperHeader {
@@ -85,9 +90,9 @@ h2 {
     color: white;
     text-align: center;
     text-transform: uppercase;
-    margin: 5% 0 0;
+    font-weight: bold;
+    margin: 6% 0 1%;
     padding: 0 0 0 0;
-    font-weight:bold;
 }
 
 h1 {
@@ -97,12 +102,11 @@ h1 {
     text-transform: uppercase;
     font-weight: bold;
     background: #fff;
-    margin: 3% 0 3%;
+    margin: 0 0 0;
     padding: 5px 18px;
     border-radius: 12px;
     font-family: "Roboto Condensed", "open sans", sans-serif;
     vertical-align: middle;
-    border:none;
 }
 
 .button {
@@ -110,7 +114,8 @@ h1 {
     border: 3px solid white;
     border-radius: 23px;
     color: white;
-    padding: 15px 21px;
+    padding: 12px 20px;
+    margin: 0em;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -120,28 +125,35 @@ h1 {
 }
 
 #color {
-    background-color: #e8b492;
-    border-radius: 50%;
-    border: 4px solid #fff;
+    border: none;
     position: absolute;
-    top: -18px;
-    right: -18px;
+    top: -30px;
+    right: -30px;
     width: 40px;
     height: 40px;
     text-align: center;
-    line-height: 40px;
-    font-size: 30px;
-    font-weight:bold;
+    font-size: 22px;
+    font-weight: bold;
     color: #fff;
+    margin: 0 auto;
+    padding: 0 auto;
 }
 
 .dark {
     color: black
 }
 
-a, a:hover, a:active, a:link, a:visited {
-    outline:none;
-    border:none;
-    text-decoration:none;
-    border:0!important;
+a,
+a:hover,
+a:active,
+a:link,
+a:visited {
+    outline: none;
+    border: none;
+    text-decoration: none;
+    border: 0!important;
+}
+
+.btn:focus {
+    outline: none;
 }
