--- a/style.css
+++ b/style.css
@@ -41,15 +41,14 @@ body {
 
 .trout {
     position: relative;
-    width: inherit;
-    min-width: 35%;
-    max-width: 520px;
+    width: @screen-md-mid;
+    min-width: 30%;
+    max-width: 485px;
     background-color: rgb(248, 208, 161);
     border: 4px solid white;
     border-radius: 23px;
-    margin: 3% 5% 3%;
-    padding: 1% 0px 1%;
-    box-sizing: border-box;
+    margin: 30px 0px 30px;
+    padding: 10px 0px 10px;
 }
 
 #wrapperHeader {
@@ -114,7 +113,7 @@ h1 {
     border: 3px solid white;
     border-radius: 23px;
     color: white;
-    padding: 12px 20px;
+    padding: 12px 21px;
     margin: 0em;
     text-align: center;
     text-decoration: none;
