--- a/style.css
+++ b/style.css
@@ -155,3 +155,12 @@ a:visited {
 .btn:focus {
     outline: none;
 }
+
+footer a {
+    color: rgb(219,127,94);
+}
+footer a:hover {
+    color: rgb(248, 208, 161) !important;
+}
+
+
