HATE BUTTON OUTLINE!!
get rid of that ugly pesky fuck!!!!!

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     overflow: scroll;
     overflow-x: hidden;
-     -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;
     /* Firefox, other Gecko */
@@ -29,7 +29,6 @@ body {
     /* Firefox all */
     -ms-user-select: none;
     /* IE 10+ */
-
 }
 
 /* .container {
@@ -122,6 +121,10 @@ h1 {
     outline: none;
 }
 
+button:focus {
+    outline: none;
+}
+
 #color {
     border: none;
     position: absolute;
@@ -157,10 +160,9 @@ a:visited {
 }
 
 footer a {
-    color: rgb(219,127,94);
+    color: rgb(219, 127, 94);
 }
+
 footer a:hover {
     color: rgb(248, 208, 161) !important;
 }
-
-
