forgot to fix this
u fucken dull-ass binch!!

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h1 {
     vertical-align: middle;
 }
 
-.button {
+button {
     background-color: #ff5959;
     border: 3px solid white;
     border-radius: 23px;
