--- a/style.css
+++ b/style.css
@@ -126,17 +126,19 @@ button:focus {
 
 #color {
     border: none;
-    position: absolute;
-    top: -30px;
-    right: -30px;
-    width: 40px;
-    height: 40px;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0px;
+    right: 0px;
+    float: right;
     text-align: center;
     font-size: 22px;
     font-weight: bold;
     color: #fff;
-    margin: 0 auto;
-    padding: 0 auto;
+    margin: 90px -15px 0 0;
+    z-index: 100;
+    overflow: hidden;
+
 }
 
 .dark {
