--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 #wrapperHeader {
     width: 100%;
     height: 200px;
-    background: url("https://i.imgur.com/tWerAps.png") no-repeat center;
+    background: url("logo.png") no-repeat center;
     text-align: center;
     border: none;
 
@@ -117,8 +117,8 @@ button:focus {
 }
 
 .dark {
-    /* color: black; */
-    color: rgb(219, 127, 94) !important;
+/*    color: black;  */
+    color: rgb(219, 127, 94) !important; 
 }
 
 a,
