--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-    background: url("https://i.imgur.com/N1rdKHo.png") no-repeat fixed;
+    background: url("background.png") no-repeat fixed;
     background-color: #cccccc;
     background-size: 100% 100%;
     font-family: "roboto condensed", "open sans", sans-serif;
@@ -34,8 +34,7 @@ body {
     padding: 0 auto;
     width: 100%;
     margin: 0 auto;
-}
-*/
+} */
 
 .trout {
     position: relative;
@@ -44,7 +43,7 @@ body {
     background-color: rgb(248, 208, 161);
     border: 4px solid white;
     border-radius: 23px;
-    margin: 30px 0px 30px;
+    margin: 10px 0px 10px;
     padding: 10px 0px 10px;
 }
 
@@ -54,19 +53,19 @@ body {
     background: url("logo.png") no-repeat center;
     text-align: center;
     border: none;
-
+    margin: 0 auto;
 }
 
 #wrapperHeader #header {
     width: 100%;
-    height: 200px;
+    height: 100px;
     margin: 0 auto;
     border: none;
 }
 
 #wrapperHeader #header img {
     width: 336px;
-    height: 149px;
+    height: 100px;
     margin: 0 auto;
     border: none;
 }
@@ -75,7 +74,7 @@ body {
 h2 {
     font-family: "roboto condensed", "open sans", sans-serif;
     font-size: 22px;
-    color: white;
+    color: rgb(219, 127, 94);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -85,7 +84,7 @@ h2 {
 
 h1 {
     display: inline-block;
-    color: #e1ab87;
+    color: rgb(219, 127, 94);
     font-size: 28px;
     text-transform: uppercase;
     font-weight: bold;
@@ -101,7 +100,7 @@ button {
     background-color: #ff5959;
     border: 3px solid white;
     border-radius: 23px;
-    color: white;
+    color: #fff;
     padding: 12px 21px;
     margin: 0em;
     text-align: center;
@@ -112,14 +111,41 @@ button {
     outline: none;
 }
 
+.reset {
+    border-radius: 50%;
+    padding: 15px 10px;
+    margin-top: -20px;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
 button:focus {
     outline: none;
 }
 
+/* BEGIN DARK MODE/HIGH CONTRAST SETTINGS */
+
 .dark {
-/*    color: black;  */
-    color: rgb(219, 127, 94) !important; 
+    color: #f2a365; 
 }
+
+.dark2 {
+    background-color: #30475e;
+    color: #f2a365; 
+}
+
+.darkbtn
+{
+    border-color: #ececec;
+}
+
+.darkdiv
+{
+    background-color: #222831;
+    border-color: #ececec;
+}
+
+/* END DARK MODE/HIGH CONTRAST SETTINGS */
 
 a,
 a:hover,
@@ -154,9 +180,7 @@ a:visited {
     outline: none;
 }
 
-button#reset {
-    float: top;
-}
+
 
 #color {
     border: none;
