--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ h1 {
     vertical-align: middle;
 }
 
+
 button {
     background-color: #ff5959;
     border: 3px solid white;
@@ -172,6 +173,7 @@ footer a:hover {
     color: rgb(248, 208, 161) !important;
 }
 
+
 h1 a,
 a:hover,
 a:active,
@@ -181,7 +183,11 @@ a:visited {
     outline: none;
 }
 
+h1:hover {
+    background: #848484 !important;
+}
 
+/*  MOON TOGGLE BUTTON   */
 
 #color {
     border: none;
